@@ -56,6 +56,9 @@
 [seaking_server_1.0.0.1 2013-10-09 张春生]
 1、新功能：增加伙伴装载装备、卸载装备、升级装备功能
 
+[seaking_server_1.0.0.1 2013-10-10 张春生]
+1、新功能：增加获得昵称功能
+
 --备注分类
 1、新功能：
 2、Bug:
